# cyberdemo

./: .gitignore  API_INTEGRATION_REPORT.md  DEMO_GUIDE.md  README.md  SYNTHETIC_GENERATORS_IMPLEMENTATION_REPORT.md  package-lock.json  package.json  start.sh  vitest.config.ts  wireframes.html
backend/: PLAN_SSVC_CLASSIFICATION.md  PROGRESS_SSVC_CLASSIFICATION.md  README.md  alembic.ini  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_agent_orchestration_tables.py
backend/docs/: MCP_VULNERABILITY_TOOLS.md  TDD_VERIFICATION_REPORT.md  THREAT_ENRICHMENT_TEST_RESULTS.md
backend/playbooks/: cloud_compromise_response.yaml  contain_and_investigate.yaml  data_exfiltration_response.yaml  false_positive_closure.yaml  insider_threat_investigation.yaml  lateral_movement_hunt.yaml  ransomware_response.yaml  vip_escalation.yaml
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  agent.py  aip_assist.py  analysis.py  analysis_queue.py  approvals.py  assets.py  audit.py  collab.py  config.py  copilot.py  ctem.py  dashboard.py  edr.py  enrichment.py  gen.py  graph.py  health.py  intel.py  mitre.py  narration.py  notifications.py  playbooks.py  postmortems.py  router.py  siem.py  soar.py  surface.py  threats.py  tickets.py  timeline.py  ui_actions.py  vuln_enrichment.py  vuln_remediation.py  vuln_ssvc.py  (+3 more)
backend/tests/: test_api.py  test_demo_runner.py  test_generators.py  test_graph.py  test_mcp_data_server.py  test_mcp_server.py  test_opensearch_dashboards.py  test_policy_engine.py  test_soar.py  test_surface_api.py
(+1159 files in other folders)
